--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 - 👋 Hi, I’m @Kennedy0777
-- 👀 I’m interested in ...
-- 🌱 I’m currently learning ...
-- 💞️ I’m looking to collaborate on ...
-- 📫 How to reach me ...
+- 👀 I’m interested in Python
+- 🌱 I’m currently learning python
+- 💞️ I’m looking to collaborate on realife projects
+- 📫 How to reach me twitter @qweskennedy
